# dedup

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Makefile  README.md  README.rst  install.sh  main.py  pyproject.toml  uninstall.sh
dedup/: appraiser.py  cache.py  colander.py  context.py  logger.py  main.py  misc.py  processor.py  reader.py  walker.py
tests/: conftest.py  test_integration.py  test_unit.py
tidi/: __init__.py  distribute.py
